src/test/deca/context/invalid/protected-otherClass.context
protected-otherClass.deca:7:
